<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <Button
        android:id="@+id/num0"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num0"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inverter" />

    <Button
        android:id="@+id/num1"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num1"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/inverter"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num2"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num2"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num0"
        app:layout_constraintEnd_toStartOf="@+id/num3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num1" />

    <Button
        android:id="@+id/num3"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num3"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num2" />

    <Button
        android:id="@+id/num4"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num4"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num1"
        app:layout_constraintEnd_toStartOf="@+id/num5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num5"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num5"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num2"
        app:layout_constraintEnd_toStartOf="@+id/num6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num4" />

    <Button
        android:id="@+id/num6"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num6"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num3"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num5" />

    <Button
        android:id="@+id/num7"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num7"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num4"
        app:layout_constraintEnd_toStartOf="@+id/num8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num8"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num8"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num5"
        app:layout_constraintEnd_toStartOf="@+id/num9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num7" />

    <Button
        android:id="@+id/num9"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/num9"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num6"
        app:layout_constraintEnd_toStartOf="@+id/times"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num8" />

    <Button
        android:id="@+id/c"
        style="@style/MeuBotaoCinzaClaro"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_cinza_claro"
        android:backgroundTint="@color/cinza_claro"
        android:gravity="center"
        android:text="@string/c"
        android:textColor="@color/vermelho"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num7"
        app:layout_constraintEnd_toStartOf="@+id/backspace"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_claro"
        android:contentDescription="@string/back_space"
        android:padding="16dp"
        android:src="@drawable/baseline_backspace_24"
        app:layout_constraintBottom_toTopOf="@+id/num8"
        app:layout_constraintEnd_toStartOf="@+id/percentual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/c" />

    <Button
        android:id="@+id/percentual"
        style="@style/MeuBotaoCinzaClaro"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_cinza_claro"
        android:backgroundTint="@color/cinza_claro"
        android:gravity="center"
        android:text="@string/percent"
        android:textColor="@color/verde_claro"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/num9"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backspace" />

    <Button
        android:id="@+id/divide"
        style="@style/MeuBotaoCinzaClaro"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_cinza_claro"
        android:backgroundTint="@color/cinza_claro"
        android:gravity="center"
        android:text="@string/divide"
        android:textColor="@color/verde_claro"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/times"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percentual" />

    <Button
        android:id="@+id/times"
        style="@style/MeuBotaoCinzaClaro"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_cinza_claro"
        android:backgroundTint="@color/cinza_claro"
        android:gravity="center"
        android:text="@string/times"
        android:textColor="@color/verde_claro"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num9" />

    <Button
        android:id="@+id/minus"
        style="@style/MeuBotaoCinzaClaro"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_cinza_claro"
        android:backgroundTint="@color/cinza_claro"
        android:gravity="center"
        android:text="@string/minus"
        android:textColor="@color/verde_claro"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num6" />

    <Button
        android:id="@+id/add"
        style="@style/MeuBotaoCinzaClaro"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/botao_cinza_claro"
        android:backgroundTint="@color/cinza_claro"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/verde_claro"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num3" />

    <Button
        android:id="@+id/equal"
        style="@style/MeuBotaoVerde"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/botao_verde"
        android:backgroundTint="@color/verde_escuro"
        android:gravity="center"
        android:text="@string/equal"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot" />

    <Button
        android:id="@+id/dot"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/dot"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num0" />

    <Button
        android:id="@+id/inverter"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/botao_redondo"
        android:backgroundTint="@color/cinza_escuro"
        android:gravity="center"
        android:text="@string/inverter"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textView"
        android:hint="@string/vazia"
        android:autofillHints=""
        android:layout_width="413dp"
        android:layout_height="91dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="end|center_vertical"
        android:textAlignment="textEnd"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@android:color/transparent"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>